[package]
name = "ksql"
description = "A JSON data expression lexer, parser, cli and library"
version = "0.8.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-playground/ksql"
authors = ["Dean Karn <dean.karn@gmail.com>"]
keywords = [
    "json",
    "expression",
    "parser",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anydate = "0.3.0"
anyhow = "1.0.66"
atty = "0.2.14"
chrono = { version = "0.4.22", features = ["serde"] }
clap = { version = "4.0.18", features = ["derive"] }
gjson = "0.8.1"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
thiserror = "1.0.37"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }

[lib]
bench = false

[[bench]]
name = "bench"
harness = false

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = 'abort'
